[tool.poetry]
name = "auction"
version = "0.1.0"
description = ""
authors = ["pashkan111 <kozhevnikov0001@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
asyncpg = "^0.27.0"
sqlalchemy = "^2.0.15"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
python-dotenv = "^1.0.0"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
